--- a/src/Pages/NuvaRing.modules.css
+++ b/src/Pages/NuvaRing.modules.css
@@ -13,7 +13,13 @@
 .subheading {
   font-weight: bold;
 }
+
 .bc-heading {
+  font-size: 45px !important;
+  margin-top: 100px;
+}
+
+.review-heading {
   font-size: 45px !important;
 }
 
@@ -24,8 +30,22 @@
   background-color: rgb(183, 233, 183);
 }
 
+.submit-button {
+  padding: 10px;
+  border-radius: 50%;
+  border: none;
+  background-color: orange;
+  margin-left: 650px;
+  margin-top: 5px;
+}
+
 .endofpage {
   margin-top: 50px;
+}
+
+.text-area {
+  width: 700px;
+  height: 100px
 }
 
 
@@ -64,5 +84,21 @@
 
   .text-container {
     width: 350px; 
+  }
+
+  .bc-heading {
+    font-size: 45px !important;
+    margin-top: 20px;
+  }
+
+  .text-area {
+    width: 350px;
+    height: 100px
+  }
+
+  .submit-button {
+    margin-left: 0; 
+    margin-top: 10px;
+    margin-bottom: 40px; 
   }
 }
