--- a/src/Pages/Condoms.modules.css
+++ b/src/Pages/Condoms.modules.css
@@ -28,6 +28,7 @@
   border-radius: 50%;
   border: none;
   background-color: rgb(183, 233, 183);
+  color: black;
 }
 
 .submit-button {
@@ -37,6 +38,7 @@
   background-color: orange;
   margin-left: 650px;
   margin-top: 5px;
+  color: black;
 }
 
 .endofpage {
