--- a/src/Pages/IUD.modules.css
+++ b/src/Pages/IUD.modules.css
@@ -27,6 +27,7 @@
   border-radius: 50%;
   border: none;
   background-color: rgb(183, 233, 183);
+  color: black;
 }
 
 .submit-button {
@@ -36,6 +37,7 @@
   background-color: orange;
   margin-left: 650px;
   margin-top: 5px;
+  color: black;
 }
 
 .endofpage {
